[tool.poetry]
name = "us-census-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "us_census_data"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterlab = "^3.6.1"
jupyter-black = "^0.3.3"
jupyter-lsp = "^1.5.1"
nbqa = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
